# dbml2dot

./: .gitignore  README.md  pyproject.toml  release.sh
dbml2dot/: __main__.py
dbmlviz/: __init__.py  __main__.py  generators.py
